kubernetes/k3s/monitoring/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-ui
  namespace: monitoring
spec:
  rules:
    - host: "grafana.coldbrew.labs"
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
